add permission exception overrides