@@ -1,7 +1,7 @@
 package com.danidipp.dippgen.Events;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.bukkit.entity.Player;
@@ -12,9 +12,7 @@ import org.bukkit.event.block.BlockPlaceEvent;
 
 import com.sk89q.worldedit.bukkit.BukkitAdapter;
 import com.sk89q.worldedit.util.Location;
-import com.sk89q.worldedit.world.World;
 import com.sk89q.worldguard.WorldGuard;
-import com.sk89q.worldguard.protection.managers.RegionManager;
 import com.sk89q.worldguard.protection.regions.ProtectedRegion;
 import com.sk89q.worldguard.protection.regions.RegionContainer;
 import com.sk89q.worldguard.protection.regions.RegionQuery;
@@ -30,13 +28,30 @@ public class CheckDistrictOnBlockPlace implements Listener {
 		Player player = event.getPlayer();
 		if (player.hasPermission("dipp.admin"))
 			return;
+		var exceptionPermission = "dipp.exception.place." + event.getBlock().getType().name().toLowerCase();
+		if (player.getEffectivePermissions().stream().anyMatch(p -> p.getPermission().equals(exceptionPermission))) {
+			if (player.hasPermission(exceptionPermission)) {
+				if (player.hasPermission("dipp.debug")) {
+					player.spigot().sendMessage(ChatMessageType.ACTION_BAR, new TextComponent(exceptionPermission));
+				}
+				return;
+			} else {
+				if (player.hasPermission("dipp.debug")) {
+					var error = new TextComponent("Explicit exception override: " + exceptionPermission);
+					error.setColor(ChatColor.RED);
+					player.spigot().sendMessage(ChatMessageType.ACTION_BAR, new TextComponent(error));
+				}
+				event.setCancelled(true);
+				return;
+			}
+		}
 
 		var regions = getRegions(event.getBlock().getLocation());
-		var topRegionIsolatePermission = "dipp." + regions.getFirst().getId() + ".isolate";
-		if (regions.getFirst().getPriority() != 5 && !player.hasPermission(topRegionIsolatePermission)) {
+		var topRegionIsolatePermission = "dipp." + regions.get(0).getId() + ".isolate";
+		if (regions.get(0).getPriority() != 5 && !player.hasPermission(topRegionIsolatePermission)) {
 			// Player is not in a plot
 			if (player.hasPermission("dipp.debug")) {
-				var error = new TextComponent("Region " + regions.getFirst().getId() + " is not isolated.");
+				var error = new TextComponent("Region " + regions.get(0).getId() + " is not isolated.");
 				error.setColor(ChatColor.RED);
 				player.spigot().sendMessage(ChatMessageType.ACTION_BAR, error);
 			}
@@ -44,6 +59,7 @@ public class CheckDistrictOnBlockPlace implements Listener {
 			return;
 		}
 
+		var checkedRegions = new ArrayList<String>();
 		for (var region : regions) {
 			var permission = "dipp." + region.getId() + ".place." + event.getBlockPlaced().getType().name().toLowerCase();
 			if (player.hasPermission(permission)) { // allow event to go through
@@ -51,6 +67,7 @@ public class CheckDistrictOnBlockPlace implements Listener {
 					player.spigot().sendMessage(ChatMessageType.ACTION_BAR, new TextComponent(permission));
 				return;
 			}
+			checkedRegions.add(region.getId());
 
 			var isolatedPermission = "dipp." + region.getId() + ".isolate";
 			if (player.hasPermission(isolatedPermission)) {
@@ -59,8 +76,8 @@ public class CheckDistrictOnBlockPlace implements Listener {
 		}
 
 		if (player.hasPermission("dipp.debug")) {
-			var regionNames = regions.stream().map(r -> r.getId()).collect(Collectors.joining(", "));
-			var error = new TextComponent("No permission to place " + event.getBlockPlaced().getType().name() + " in " + regionNames);
+			var error = new TextComponent(
+					"No permission to place " + event.getBlockPlaced().getType().name() + " in " + String.join(",", checkedRegions));
 			error.setColor(ChatColor.RED);
 			player.spigot().sendMessage(ChatMessageType.ACTION_BAR, error);
 		}
@@ -72,13 +89,30 @@ public class CheckDistrictOnBlockPlace implements Listener {
 		Player player = event.getPlayer();
 		if (player.hasPermission("dipp.admin"))
 			return;
+		var exceptionPermission = "dipp.exception.break." + event.getBlock().getType().name().toLowerCase();
+		if (player.getEffectivePermissions().stream().anyMatch(p -> p.getPermission().equals(exceptionPermission))) {
+			if (player.hasPermission(exceptionPermission)) {
+				if (player.hasPermission("dipp.debug")) {
+					player.spigot().sendMessage(ChatMessageType.ACTION_BAR, new TextComponent(exceptionPermission));
+				}
+				return;
+			} else {
+				if (player.hasPermission("dipp.debug")) {
+					var error = new TextComponent("Explicit exception override: " + exceptionPermission);
+					error.setColor(ChatColor.RED);
+					player.spigot().sendMessage(ChatMessageType.ACTION_BAR, new TextComponent(error));
+				}
+				event.setCancelled(true);
+				return;
+			}
+		}
 
 		var regions = getRegions(event.getBlock().getLocation());
-		var topRegionIsolatePermission = "dipp." + regions.getFirst().getId() + ".isolate";
-		if (regions.getFirst().getPriority() != 5 && !player.hasPermission(topRegionIsolatePermission)) {
+		var topRegionIsolatePermission = "dipp." + regions.get(0).getId() + ".isolate";
+		if (regions.get(0).getPriority() != 5 && !player.hasPermission(topRegionIsolatePermission)) {
 			// Player is not in a plot
 			if (player.hasPermission("dipp.debug")) {
-				var error = new TextComponent("Region " + regions.getFirst().getId() + " is not isolated.");
+				var error = new TextComponent("Region " + regions.get(0).getId() + " is not isolated.");
 				error.setColor(ChatColor.RED);
 				player.spigot().sendMessage(ChatMessageType.ACTION_BAR, error);
 			}
@@ -86,11 +120,15 @@ public class CheckDistrictOnBlockPlace implements Listener {
 			return;
 		}
 
+		var checkedRegions = new ArrayList<String>();
 		for (var region : regions) {
 			var permission = "dipp." + region.getId() + ".break." + event.getBlock().getType().name().toLowerCase();
 			if (player.hasPermission(permission)) { // allow event to go through
+				if (player.hasPermission("dipp.debug"))
+					player.spigot().sendMessage(ChatMessageType.ACTION_BAR, new TextComponent(permission));
 				return;
 			}
+			checkedRegions.add(region.getId());
 
 			var isolatedPermission = "dipp." + region.getId() + ".isolate";
 			if (player.hasPermission(isolatedPermission)) {
@@ -98,8 +136,7 @@ public class CheckDistrictOnBlockPlace implements Listener {
 			}
 		}
 		if (player.hasPermission("dipp.debug")) {
-			var regionNames = regions.stream().map(r -> r.getId()).collect(Collectors.joining(", "));
-			var error = new TextComponent("No permission to place " + event.getBlock().getType().name() + " in " + regionNames);
+			var error = new TextComponent("No permission to break " + event.getBlock().getType().name() + " in " + String.join(",", checkedRegions));
 			error.setColor(ChatColor.RED);
 			player.spigot().sendMessage(ChatMessageType.ACTION_BAR, error);
 		}
@@ -108,18 +145,12 @@ public class CheckDistrictOnBlockPlace implements Listener {
 
 	List<ProtectedRegion> getRegions(org.bukkit.Location location) {
 		Location wgLocation = BukkitAdapter.adapt(location);
-		World world = BukkitAdapter.adapt(location.getWorld());
 
 		RegionContainer container = WorldGuard.getInstance().getPlatform().getRegionContainer();
 		RegionQuery query = container.createQuery();
 		var regions = query.getApplicableRegions(wgLocation).getRegions();
 
-		RegionManager manager = container.get(world);
-		var globalRegion = manager.getRegion("__global__");
-
 		var sortedRegions = regions.stream().sorted((r1, r2) -> r2.getPriority() - r1.getPriority()).collect(Collectors.toList());
-		sortedRegions.add(globalRegion);
-
 		return sortedRegions;
 	}
 
